01-fs: Fix to fit wiki format

--- a/labs/01-fs/wiki/basics.wiki
+++ b/labs/01-fs/wiki/basics.wiki
@@ -1,6 +1,6 @@
 ===== Basics =====
 
-Pentru a începe acest tutorial trebuie să vă asigurați că sunteți în directorul potrivit. Rulați comanda ''cd ~/uso/labs/01-fs/support/basics/''. 
+Pentru a începe acest tutorial trebuie să vă asigurați că sunteți în directorul potrivit. Rulați comanda ''cd ~/uso.git/labs/01-fs/support/basics/''. 
 
 ==== Navigarea printr-o ierarhie de directoare ====
 Listarea conținutului directorului curent se face folosind comanda ''ls''.
@@ -75,9 +75,9 @@ Observăm că prin utilizarea comenzii ''ls'' putem vedea ce avem în directorul
 Vrem să afișăm calea curentă pentru a vedea în ce director ne aflăm. Vom folosi comanda ''pwd''. După aceea, vom lista conținutul directorului pentru a-l inspecta.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics
+/home/student/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ ls
 grotesque  'hacker-s secret'   rookiss  'toddler-s bottle'
 </code>
@@ -86,16 +86,16 @@ De multe ori avem nevoie să ne plasăm cu un director în spate. Pentru a ajung
 
 <code bash>
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics
+/home/student/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ cd ..
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support
+/home/student/uso.git/labs/01-fs/support
 </code>
 
 După folosirea comenzii ''tree'' știm întreaga ierarhie și cunoaștem calea pană la un anumit subdirector. Vrem să ajungem acolo. Putem face asta prin comenzi succesive de tipul ''cd subdirector'' sau putem folosi o singură comandă pentru a ne ușura munca.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/
 [student@uso basics]$ tree .
 .
 ├── grotesque
@@ -155,17 +155,17 @@ După folosirea comenzii ''tree'' știm întreaga ierarhie și cunoaștem calea 
 13 directories, 40 files
 [student@uso basics]$ cd grotesque/do<TAB>
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics/grotesque/do you dare
+/home/student/uso.git/labs/01-fs/support/basics/grotesque/do you dare
 </code>
 
 Câteodată vrem să ne plasăm într-un alt subdirector din ierarhia mare care nu se află în calea curentă. Avem iarăși de ales între pași mici, succesivi sau folosirea unei sigure comenzi pentru a ne poziționa altundeva.
 
 <code bash>
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics/grotesque/do you dare
+/home/student/uso.git/labs/01-fs/support/basics/grotesque/do you dare
 [student@uso basics]$ cd ../../rookiss
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics/rookiss
+/home/student/uso.git/labs/01-fs/support/basics/rookiss
 </code>
 
 Până acum ne-am jucat cu ierarhia dată de echipa de USO, dar cum facem dacă vrem să ajungem în directorul ''/usr/local''? Folosim o cale **absolută** pentru a naviga direct acolo fără a ne face griji de directorul în care ne aflăm, cât va trebui să ne deplasăm în spate (sau în față) pentru a ajunge unde vrem.
@@ -191,7 +191,7 @@ Până a trece mai departe, trebuie să vă asigurați că ați înțeles cum tr
     - Ajungeți înapoi în directorul home al utilizatorului curent fără a folosi simbolul **tilda**(~).
 
 ==== Listarea fișierelor dintr-un director ====
-Plasați-vă din nou în directorul ''/uso/labs/01-fs/support/basics''.
+Plasați-vă din nou în directorul ''/uso.git/labs/01-fs/support/basics''.
 
 După cum am observat mai sus, listarea unui director se poate face folosind comanda ''ls''. Această formă de utilizare nu ne prezintă foarte multe informații despre fișierele din directorul inspectat (dimensiune, drepturi, tip, etc.). Folosind argumentul ''-l'' al lui ''ls'' putem lista conținutul unui director în format lung.
 
@@ -226,10 +226,10 @@ Utilizarea simplă a comenzii ''ls'' fără a-i da un argument special nu ne afi
 Câteodată un director poate avea foarte multe intrări, iar noi să dorim inspectăm doar o parte dintre ele. Spre exemplu, vrem să aflăm mai multe informații despre fișierele cu extensia ''.pdf''. Pentru asta, vom folosi **wilecards**.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ cd rookiss
 [student@uso basics]$ pwd
-/home/student/uso/labs/01-fs/support/basics/rookiss
+/home/student/uso.git/labs/01-fs/support/basics/rookiss
 [student@uso basics]$ ls *.pdf
 'ascii easy.pdf'   fix.pdf   otp.pdf
 </code>
@@ -252,7 +252,7 @@ Putem da oricâte argumente comenzii ''ls'', fie sub forma ''ls -a -b -c'', fie 
 Pentru a crea un nou director în directorul curent folosim comanda ''mkdir''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ ls
 grotesque  'hacker-s secret'   rookiss  'toddler-s bottle'
 [student@uso basics]$ mkdir my-new-folder
@@ -299,7 +299,7 @@ Până a trece mai departe, trebuie să vă asigurați că ați înțeles cum pu
 Pentru a redenumi un fișier folosim comanda ''mv''. Comanda ''mv'' are formatul ''mv sursă destinație''. În cazul în care uitați, folosiți ''man'' pentru a vă aminti.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/toddler-s\ bottle
 [student@uso basics]$ ls
 bof         fd     input      random
 collision   flag   passcode  'third weird directory'
@@ -312,7 +312,7 @@ collision   flag   passcode  'third weird directory'
 Bineînțeles, putem redenumi un fișier aflat într-un alt director.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/toddler-s\ bottle
 [student@uso basics]$ ls ../grotesque/do\ you\ dare/
 ascii  dos4fun  elf  hunter  hunting  mipstake  rootkit
 [student@uso basics]$ mv ../grotesque/do\ you\ dare/mipstake ../grotesque/do\ you\ dare/mistake
@@ -352,7 +352,7 @@ Există posibilitatea să mutăm un fișier într-un alt director și să-i schi
 În cazul în care avem mai multe fișiere de mutat într-un alt (același) director, folosim tot comanda ''mv''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/toddler-s\ bottle/
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/toddler-s\ bottle/
 [student@uso basics]$ ls
  bof   fd   input   passcode   random  'third weird directory'
 [student@uso basics]$ ls ../rookiss/
@@ -376,7 +376,7 @@ Până a trece mai departe în cadrul acestei secțiuni, trebuie să ne asigură
 Pentru a redenumi un fișier am văzut că folosim comanda ''mv''. În cazul în care vrem ca noul nume să conțină spații, procedăm ca mai devreme (vezi crearea directoarelor).
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ ls
  bof1.txt   bof4.txt   'hacker-s secret'  'toddler-s bottle'
  bof2.txt   bof5.txt    my-new-folder     'weird directory'
@@ -391,7 +391,7 @@ Pentru a redenumi un fișier am văzut că folosim comanda ''mv''. În cazul în
 Putem întâlni sitația în care vrem să redenumim un fișier al cărui nume conține deja spații, acestea trebuie escapate ca mai devreme. Putem scrie numele între ghilimele, însă există riscul să greșim în cazul numelor complicate și lungi. Cel mai sigur și ușor este să abuzăm de tasta ''TAB'' pentru a fi siguri că nu greșim.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ mv w<TAB> "weird directory again"
 [student@uso basics]$ ls
  bof1.txt   bof4.txt   'hacker-s secret'  'toddler-s bottle'
@@ -409,7 +409,7 @@ Până a trece mai departe, trebuie să ne asigurăm că ați reținut cum trebu
 Ne-a rămas o singură comandă de bază despre care nu am vorbit, ștergerea. Pentru a șterge un fișier, folosim comanda ''rm''.
 
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics/grotesque
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics/grotesque
  coin2  'do you dare'   elf   hunter   mistake
 [student@uso basics]$ rm coin2
 [student@uso basics]$ ls
@@ -419,7 +419,7 @@ Ne-a rămas o singură comandă de bază despre care nu am vorbit, ștergerea. P
 Avem posibilitatea de a șterge fișiere multiple folosind o singură comandă. Pentru asta, va trebui să pasăm ca argument comenzii toate fișierele pe care dorim să le ștergem.
 
 <code bash>
-[student@uso basics]$ ~/uso/labs/01-fs/support/basic/toddler-s\ bottle/bof/easy
+[student@uso basics]$ ~/uso.git/labs/01-fs/support/basic/toddler-s\ bottle/bof/easy
 [student@uso basics]$ ls
 bof-bof-bof  can-you-bof  random-bof.txt
 [student@uso basics]$ rm bof-bof-bof can-you-bof
@@ -428,7 +428,7 @@ random-bof.txt
 </code>
 
 
-Ne aflăm în directorul ''~/uso/labs/01-fs/support/basics/grotesque'' și vrem să ștergem un fișier dintr-un alt director fără schimba directorul în care ne aflăm. Putem face acest lucru ușor dându-i comenzii ''rm'' calea către acel fișier (fie absolută, fie relativă).
+Ne aflăm în directorul ''~/uso.git/labs/01-fs/support/basics/grotesque'' și vrem să ștergem un fișier dintr-un alt director fără schimba directorul în care ne aflăm. Putem face acest lucru ușor dându-i comenzii ''rm'' calea către acel fișier (fie absolută, fie relativă).
 
 <code bash>
 [student@uso basics]$ ls
@@ -443,7 +443,7 @@ al comenzii ''rm''.
 Dacă directorul pe care vrem să-l ștergem este gol, putem folosi și
 comanda ''rmdir''.
 <code bash>
-[student@uso basics]$ cd ~/uso/labs/01-fs/support/basics
+[student@uso basics]$ cd ~/uso.git/labs/01-fs/support/basics
 [student@uso basics]$ ls
  bof1.txt   bof5.txt           my-new-rookiss      'weird directory again'
  bof2.txt   grotesque          random-org
