labs/01-fs: Reset Git repository during lab setup phase

--- a/labs/01-fs/wiki/setup.wiki
+++ b/labs/01-fs/wiki/setup.wiki
@@ -64,7 +64,7 @@ Pentru a obține informații detaliate despre noțiunile și tehnicile din acest
 
 */
 
-===== Infrastructură de laborator =====
+==== Obiective ====
 
   * Familiarizarea cu linia de comandă în Linux
   * Familiarizarea cu comenzi simple în ''Bash'' (terminalul din Linux)
@@ -81,14 +81,18 @@ Informațiile despre laboratorul de USO se găsesc în [[https://github.com/syst
 În laboratorul curent, pe mașina virtuală furnizată, aveți deja clonat repository-ul Git în directorul ''~/uso.git/''. Vom preciza acest lucru pe parcursul laboratorului.
 
 <note important>
-Pentru a pregăti infrastructura de laborator rulați comenzile de mai jos într-un terminal deschis în mașina virtuală. Deschideți un terminal folosind combinația de taste ''Ctrl+Alt+t''. În listarea de mai jos ''student@uso:~$'' este promptul unde introduceți comenzile, pe acela nu-l tastați. Recomandăm să nu folosiți //copy-paste// ca să vă acomodați cu linia de comandă:
+Pentru a pregăti infrastructura de laborator rulați comenzile de mai jos într-un terminal deschis în mașina virtuală. Deschideți un terminal folosind combinația de taste ''Ctrl+Alt+t''. În listarea de mai jos ''student@uso:~$'' este promptul unde introduceți comenzile, pe acela nu-l tastați. Recomandăm să **nu** folosiți //copy-paste// ca să vă acomodați cu linia de comandă:
 <code>
+student@uso:~$ cd uso.git/
+student@uso:~/uso.git$ git rm --cached -r .
+student@uso:~/uso.git$ git reset --hard
+student@uso:~/uso.git$ git clean -f -d
 student@uso:~/uso.git$ git fetch origin
 student@uso:~/uso.git$ git checkout -b lab-01-fs
 student@uso:~/uso.git$ git rebase origin/lab-01-fs
-</note>
+</code>
 
-Dacă la a doua comandă rulată (''git checkout -b lab-01-fs'') primiți o eroare de forma ''fatal: A branch named 'lab-01-fs' already exists.'', nu vă îngrijorați, nu e nici o problemă.
+Dacă la a cincea comandă rulată (''git checkout -b lab-01-fs'') primiți o eroare de forma ''fatal: A branch named 'lab-01-fs' already exists.'', nu vă îngrijorați, nu e nici o problemă.
 </note>
 
 Cam atât cu pregătirea laboratorului. Acum haideți să ne apucăm de treabă! :-)
