--- a/labs/01-fs/wiki/concepts.wiki
+++ b/labs/01-fs/wiki/concepts.wiki
@@ -10,23 +10,24 @@ Un director este de fapt tot un fișier ce conține adresele altor fișiere. În
 Link-urile sunt legături între două puncte ale sistemului de fișiere. În general le folosim când vrem să ne ușurăm accesul la un fișier sau director, sau pentru a uniformiza accesul.
 
 Sistemul de fișiere folosit în Linux permite două tipuri de link-uri:
-* link-uri simbolice (soft links): se comportă precum un shortcut din Windows; pointează către un alt fișier/director
-* link-uri hard (hard links): nu au echivalent în Windows; simplu spus, sunt două fișiere ce împart aceleași date
+  * link-uri simbolice (soft links): se comportă precum un shortcut din Windows; pointează către un alt fișier/director
+  * link-uri hard (hard links): nu au echivalent în Windows; simplu spus, sunt două fișiere ce împart aceleași date
 
 Sistemul de fișiere este folosit pentru a organiza ierarhic toate datele stocate pe un sistem.
 
 În Linux, acesta are urmatoarea structura arborescenta, ce poate fi vizualizată folosind comanda tree:
-{{:uso-ac:laboratoare:fs-tree.png?200|}}
+
+{{ :uso-ac:laboratoare:fs-tree.png?600 |}}
 
 Un director poate conține mai multe fișiere și directoare, iar directoarele la rândul lor pot conține alte fișire și directoare.
 
 În Linux, întreaga structură de directoare pornește din directorul root reprezentat de un singur slash "/".
 Directorul root conține numeroase alte directoare ce stochează diferite tipuri de informații:
-* /bin conține fișiere executabile, utilitare fundamentale cum ar fi cp, ls
-* /boot conține toate fișierele necesare pentru botarea cu succes a sistemului
-* /etc conține fișiere de configurare
-* /root este directorul home al utilizatorului privilegiat root
-* /home conține directoarele home pentru toți utilizatorii din sistem
+  * /bin conține fișiere executabile, utilitare fundamentale cum ar fi cp, ls
+  * /boot conține toate fișierele necesare pentru botarea cu succes a sistemului
+  * /etc conține fișiere de configurare
+  * /root este directorul home al utilizatorului privilegiat root
+  * /home conține directoarele home pentru toți utilizatorii din sistem
 
 În directorul home al unui utilizator se gasesc fișiere personale, ce nu pot fi accesate de alți utilizatori.
 
@@ -37,20 +38,20 @@ A nu se confunda root-ul sistemului de fișiere și utlizatorul root.
 ==== Stocarea datelor ====
 
 După cum am spus la începutul laboratorului, datele sunt stocate pe un disk (hard-disk, SSD, CD-ROM).
-În Linux, există numeroase formate de stocare a datelor, numite și tipuri de sisteme de fisiere: ext4, ext3, ext2, ZFS, XFS. Acestea specifică modul în care datele sunt stocate și ulterior accesate de pe disk. Forma cea mai comună de stocare a datelor este ext4.
+În Linux, există numeroase formate de stocare a datelor, numite și tipuri de sisteme de fisiere: ''ext4'', ''ext3'', ''ext2'', ''ZFS'', ''XFS''. Acestea specifică modul în care datele sunt stocate și ulterior accesate de pe disk. Forma cea mai comună de stocare a datelor este ''ext4''.
 
 Ca o comparație între Windows și Linux, după cum știm Windows are disk-uri A, B, C, D, etc., în Linux trebuie ca disk-ul să fie legat la sistemul de fișiere într-un director ales.
-Această operație se numește montare și se realizează folosind comanda mount. Folosită fără niciun argument ne va spune ce sisteme de fișiere sunt montate și în ce directoare sunt montate.
+Această operație se numește montare și se realizează folosind comanda ''mount''. Folosită fără niciun argument ne va spune ce sisteme de fișiere sunt montate și în ce directoare sunt montate.
 
 
 ==== Căi absolute/relative ====
 
 Pentru accesare unui fișier sau director sunt posibile două moduri, în funcție de directorul curent:
-* căi absolute: pornesc din directorul root
-* căi relative: pornesc din directorul curent
+  * căi absolute: pornesc din directorul root
+  * căi relative: pornesc din directorul curent
 
-Directorul curent este directorul in care utilizatorul se află la momentul actual. Acesta poate fi aflat folosint comanda pwd.
-Pentru schimbarea directorului curent se folosește comanda cd.
+Directorul curent este directorul in care utilizatorul se află la momentul actual. Acesta poate fi aflat folosind comanda ''pwd''.
+Pentru schimbarea directorului curent se folosește comanda ''cd''.
 
 Să luăm ca exemplu următoarea structură de fișiere și directoare
 
@@ -67,7 +68,7 @@ Să luăm ca exemplu următoarea structură de fișiere și directoare
 │               └── task4
 </code>
 
-Dacă dorim să afișăm fișierul taks3 folosind o cale absolută vom folosi comanda ls, astfel:
+Dacă dorim să afișăm fișierul taks3 folosind o cale absolută vom folosi comanda ''ls'', astfel:
 <code bash>
 $ ls /home/student/lab-02/task3
 </code>
@@ -93,6 +94,7 @@ Caracterul ".." specifică directorul parinte directorului curent.
 <note important>
 Căile absolute se pot folosi indiferent de directorul curent în care se află utilizatorul. Căile relative depind de directorul curent.
 </note>
+
 
 ==== Utilizatori și pemisiuni ====
 
