--- a/labs/01-fs/wiki/concepts.wiki
+++ b/labs/01-fs/wiki/concepts.wiki
@@ -9,30 +9,26 @@ Un director este de fapt tot un fișier ce conține adresele altor fișiere. În
 
 Link-urile sunt legături între două puncte ale sistemului de fișiere. În general le folosim când vrem să ne ușurăm accesul la un fișier sau director, sau pentru a uniformiza accesul.
 
-Sistemul de fișiere folosit în Linux permite două tipuri de link-uri:
-  * link-uri simbolice (soft links): se comportă precum un shortcut din Windows; pointează către un alt fișier/director
-  * link-uri hard (hard links): nu au echivalent în Windows; simplu spus, sunt două fișiere ce împart aceleași date
-
 Sistemul de fișiere este folosit pentru a organiza ierarhic toate datele stocate pe un sistem.
 
-În Linux, acesta are urmatoarea structura arborescenta, ce poate fi vizualizată folosind comanda tree:
+În Linux, acesta are urmatoarea structura arborescenta, ce poate fi vizualizată folosind comanda ''tree'':
 
 {{ :uso-ac:laboratoare:fs-tree.png?600 |}}
 
-Un director poate conține mai multe fișiere și directoare, iar directoarele la rândul lor pot conține alte fișire și directoare.
+Un director poate conține mai multe fișiere și directoare, iar directoarele la rândul lor pot conține alte fișiere și directoare.
 
 În Linux, întreaga structură de directoare pornește din directorul root reprezentat de un singur slash "/".
 Directorul root conține numeroase alte directoare ce stochează diferite tipuri de informații:
   * /bin conține fișiere executabile, utilitare fundamentale cum ar fi cp, ls
-  * /boot conține toate fișierele necesare pentru botarea cu succes a sistemului
+  * /boot conține toate fișierele necesare pentru bootarea cu succes a sistemului
   * /etc conține fișiere de configurare
   * /root este directorul home al utilizatorului privilegiat root
   * /home conține directoarele home pentru toți utilizatorii din sistem
 
-În directorul home al unui utilizator se gasesc fișiere personale, ce nu pot fi accesate de alți utilizatori.
+În directorul home al unui utilizator se găsesc fișiere personale, ce nu pot fi accesate de alți utilizatori.
 
 <note important>
-A nu se confunda root-ul sistemului de fișiere și utlizatorul root.
+A nu se confunda root-ul sistemului de fișiere și utilizatorul root.
 </note>
 
 ==== Stocarea datelor ====
@@ -46,49 +42,63 @@ Această operație se numește montare și se realizează folosind comanda ''mou
 
 ==== Căi absolute/relative ====
 
-Pentru accesare unui fișier sau director sunt posibile două moduri, în funcție de directorul curent:
+Pentru accesarea unui fișier sau director sunt posibile două moduri, în funcție de directorul curent:
   * căi absolute: pornesc din directorul root
   * căi relative: pornesc din directorul curent
 
 Directorul curent este directorul in care utilizatorul se află la momentul actual. Acesta poate fi aflat folosind comanda ''pwd''.
 Pentru schimbarea directorului curent se folosește comanda ''cd''.
 
-Să luăm ca exemplu următoarea structură de fișiere și directoare
+Să luăm ca exemplu următoarea structură de fișiere și directoare din laboratorul introductiv:
 
 <code bash>
+$ cd ~/uso.git/labs
+$ tree
 .
-├── home
-│   └── student
-│       └── labs
-│           ├── lab-01
-│           │   ├── task1
-│           │   └── task2
-│           └── lab-02
-│               ├── task3
-│               └── task4
+├── 00-intro
+│   ├── support
+│   └── wiki
+│       ├── basics.wiki
+│       ├── concepts.wiki
+│       ├── demo.wiki
+│       ├── get-a-life.wiki
+│       ├── need-to-know.wiki
+│       ├── nice-to-know.wiki
+│       └── recap.wiki
+├── 01-fs
+│   ├── support
+.
+.
+.
 </code>
 
-Dacă dorim să afișăm fișierul taks3 folosind o cale absolută vom folosi comanda ''ls'', astfel:
+Dacă dorim să afișăm fișierul concepts.wiki folosind o cale absolută vom folosi comanda ''ls'', astfel:
 <code bash>
-$ ls /home/student/lab-02/task3
+$ ls /home/student/uso.git/labs/00-intro/wiki/concepts.wiki 
 </code>
 
 Dacă ne aflăm curent în directorul labs, putem să folosim o cale relativă:
 <code bash>
-$ ls ./lab-02/task3
+$ ls ./00-intro/wiki/concepts.wiki
+</code>
+
+Sau și mai simplu:
+
+<code bash>
+$ ls 00-intro/wiki/concepts.wiki
 </code>
 
 <note important>
-Caracterul "." specifică directorul curent.
+Caracterul "." specifică directorul curent. Acesta poate fi omis, după cum se vede în exemplul anterior.
 </note>
 
-Dacă ne aflăm în directorul lab-01, putem să folosim de asemena o cale relativă, astfel:
+Dacă ne aflăm în directorul 01-fs, putem să folosim de asemenea o cale relativă, astfel:
 <code bash>
-$ ls ../lab-02/task3
+$ ls ../00-intro/wiki/concepts.wiki
 </code>
 
 <note important>
-Caracterul ".." specifică directorul parinte directorului curent.
+Caracterul ".." specifică directorul părinte directorului curent.
 </note>
 
 <note important>
@@ -117,7 +127,7 @@ Permisiunile pot fi aplicate pe trei categorii:
   * ceilalți (others): utilizatorii care nu intră în niciuna dintre categoriile dinainte
 
 Pentru fiecare dintre cele trei categorii există trei permisiuni:
-  * de citire: utilizatorul poate citi conținutul fișierului respectiv poate lista conținutul directorului
+  * de citire: utilizatorul poate citi conținutul fișierului respectiv, poate lista conținutul directorului
   * de scriere: utilizatorul poate modifica conținutul fișierului/directorului
   * de execuție: utilizatorul poate lansa fișierul în execuție respectiv poate parcurge directorul
 
