lab-08-net: basics - WIP
Signed-off-by: Costin Carabas <costin.carabas@gmail.com>

--- a/labs/08-net/wiki/basics.wiki
+++ b/labs/08-net/wiki/basics.wiki
@@ -2,3 +2,91 @@
 
 Pentru a începe acest tutorial trebuie să vă asigurați că sunteți în directorul potrivit. Rulați comanda ''cd ~/uso.git/labs/08-net/support/basics/''. 
 
+=== 1. Interfețe de rețea ===
+
+''ifconfig'' este o comandă de Linux folosită pentru a afișa interfețele de rețea disponibile pe sistemul curent de operare. De aici putem afla informații esențiale legate de conectivitatea la internet.
+
+<code bash>
+
+</code>
+
+Interfața **loopback** este o interfață virtuală (**nu** una fizică). Scopul acestei interfețe este de a întoarce pachetele trimise către ea.
+
+<code bash>
+$ ifconfig lo0
+lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 16384
+	options=1203<RXCSUM,TXCSUM,TXSTATUS,SW_TIMESTAMP>
+	inet 127.0.0.1 netmask 0xff000000 
+	inet6 ::1 prefixlen 128 
+	inet6 fe80::1%lo0 prefixlen 64 scopeid 0x1 
+	nd6 options=201<PERFORMNUD,DAD>
+</code>
+
+La câmpul inet, putem observa adresa IP ''127.0.0.1''. De obicei, aceasta este adresa interfaței de loopback. (De aici și glumele de pe internet cu ''There's no place like 127.0.0.1''. Pentru că aceasta există doar pe sistemul nostru de operare și deci, o numim "acasă").
+
+Dacă dorim să afișăm informațiile unei singure interfețe de rețea, adăugăm după utilitarul **ifconfig**, numele acesteia. Putem observa mai sus interfața **lo0** ce succede **ifconfig**.
+
+== Conectivitatea la internet ==
+
+Putem verifica conectivitatea la internet folosind utilitarul ''ping''. Acesta transmite pachete către o anumită adresa (dată ca parametru). Acest utilitar ne arată dacă pachetele trimise ajung la destinație și în cât timp. O adresă pe care o putem folosi întotdeauna este ''8.8.8.8'' (Google).
+
+<code bash>
+$ ping 8.8.8.8
+PING 8.8.8.8 (8.8.8.8): 56 data bytes
+64 bytes from 8.8.8.8: icmp_seq=0 ttl=121 time=17.324 ms
+64 bytes from 8.8.8.8: icmp_seq=1 ttl=121 time=18.513 ms
+^C
+--- 8.8.8.8 ping statistics ---
+2 packets transmitted, 2 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 17.324/17.919/18.513/0.594 ms
+</code>
+
+Putem observa ca pachetele noastre au ajuns la destinație în 17ms. De aici putem trage concluzia că avem o conexiune la internet funcțională.
+
+1.1 Aflați adresa IP de pe mașina virtuală și dați un ping in ea. Vă răspunde?
+1.2 Aflați adresele IP ale colegilor (minim 2) și dați ping in ele. Vă răspund?
+
+=== 2. Urmărirea pachetelor ===
+
+Atunci când apelăm utilitarul ping cu o anumită adresă din internet, se trimit pachete până la aceasta. Dacă acestea nu ajung la destinație, ce concluzie putem trage? Că nu avem interfața configurată corespunzător? Dar dacă providerul de internet (să spunem RDS) are o problemă sau nu ne-am plătit factura la internet? Trebuie să putem afla unde este problema. Care este punctul în care pachetele noastre se pierd. Putem afla această informație folosind utilitarul ''traceroute''
+
+<code bash>
+$ traceroute 8.8.8.8
+traceroute to 8.8.8.8 (8.8.8.8), 64 hops max, 52 byte packets
+ 1  danubiu12.lan (192.168.255.1)  3.677 ms  0.870 ms  0.808 ms
+ 2  10.0.0.1 (10.0.0.1)  1.991 ms  2.075 ms  1.908 ms
+ 3  10.30.1.209 (10.30.1.209)  3.720 ms  2.215 ms  1.959 ms
+ 4  10.220.137.28 (10.220.137.28)  21.973 ms
+    10.220.137.30 (10.220.137.30)  15.755 ms
+    10.220.128.72 (10.220.128.72)  15.574 ms
+ 5  213-154-130-234.rdsnet.ro (213.154.130.234)  17.572 ms  16.963 ms  18.208 ms
+ 6  74.125.242.241 (74.125.242.241)  17.910 ms  18.196 ms  16.700 ms
+ 7  108.170.238.135 (108.170.238.135)  15.377 ms
+    108.170.225.23 (108.170.225.23)  18.141 ms
+    209.85.142.19 (209.85.142.19)  19.790 ms
+ 8  google-public-dns-a.google.com (8.8.8.8)  16.774 ms  16.613 ms  15.950 ms
+</code>
+
+Putem observa calea pachetelor de la routerul unde suntem conectați până la serverele Google.
+Putem apela același utilitar și cu o adresa http:
+
+<code bash>
+$ traceroute google.com
+traceroute to google.com (216.58.209.174), 64 hops max, 52 byte packets
+ 1  danubiu12.lan (192.168.255.1)  1.115 ms  0.817 ms  0.835 ms
+ 2  10.0.0.1 (10.0.0.1)  2.068 ms  2.027 ms  1.991 ms
+ 3  10.30.1.209 (10.30.1.209)  2.134 ms  3.027 ms  2.515 ms
+ 4  10.220.132.8 (10.220.132.8)  16.611 ms
+    10.220.128.66 (10.220.128.66)  14.901 ms
+    10.220.128.62 (10.220.128.62)  16.787 ms
+ 5  213-154-130-234.rdsnet.ro (213.154.130.234)  17.705 ms  16.165 ms  17.994 ms
+ 6  74.125.242.241 (74.125.242.241)  16.531 ms  18.200 ms  17.689 ms
+ 7  66.249.94.123 (66.249.94.123)  18.622 ms
+    66.249.94.163 (66.249.94.163)  17.212 ms  16.840 ms
+ 8  bud02s21-in-f14.1e100.net (216.58.209.174)  15.921 ms  16.906 ms  16.412 ms
+</code>
+
+Putem observa că am aflat și adresa publică a site-ului google.com.  
+
+2.1 Afișați calea urmată de mașina virtuală către un site ales de voi. Prin care interfață ies pachetle?
+
